[project]
name = "llm-gateways"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ipykernel>=7.3.0",
    "langchain>=1.3.9",
    "langchain-community>=0.4.2",
    "langchain-groq>=1.1.3",
    "langchain-litellm>=0.6.6",
    "litellm>=1.89.0",
    "python-dotenv>=1.2.2",
]
